ontol/ontol-compiler/test-cases/error/repr/entity_as_supertype.on
def foo (
    rel. 'id': (rel* is: text)
)

def bar (
    rel* is: foo // ERROR entitities cannot be used as supertypes
)
